--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>pet-clinic-web</artifactId>
-    <version>0.0.3-SNAPSHOT</version>
+    <version>0.0.3</version>
     <name>pet-clinic-web</name>
     <description>pet-clinic-web</description>
     <properties>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>pet-clinic-data</artifactId>
-            <version>0.0.3-SNAPSHOT</version>
+            <version>0.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,4 +56,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>pet-clinic-0.0.3</tag>
+  </scm>
 </project>
