--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Mon May 23 01:06:35 EDT 2022
+#Sat May 28 15:19:12 EDT 2022
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.com.example\:pet-clinic=0.0.4-SNAPSHOT
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.rel.com.example\:pet-clinic-data=0.0.3
+project.rel.com.example\:pet-clinic-web=0.0.3
+project.rel.com.example\:pet-clinic=0.0.3
+project.scm.com.example\:pet-clinic-data.empty=true
+project.scm.com.example\:pet-clinic.developerConnection=scm\:git\:git@github.com\:simonjv01/pet-clinic.git
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:git@github.com\:simonjv01/pet-clinic.git
+project.dev.com.example\:pet-clinic-web=0.0.4-SNAPSHOT
+project.scm.com.example\:pet-clinic.tag=HEAD
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.com.example\:pet-clinic-data=0.0.4-SNAPSHOT
+project.scm.com.example\:pet-clinic-web.empty=true
+scm.tag=pet-clinic-0.0.3
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
