--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>pet-clinic-data</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>pet-clinic-data</name>
     <description>pet-clinic-data</description>
     <properties>
@@ -63,8 +63,4 @@
             </plugin>
         </plugins>
     </build>
-
-  <scm>
-    <tag>pet-clinic-0.0.3</tag>
-  </scm>
 </project>
