--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>pet-clinic-data</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4</version>
     <name>pet-clinic-data</name>
     <description>pet-clinic-data</description>
     <properties>
@@ -63,4 +63,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>pet-clinic-0.0.4</tag>
+  </scm>
 </project>
