--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -45,6 +45,10 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
 
